# Serverless

./: Makefile  go.work  go.work.sum
api/openapi/: podstack-api.yaml
deploy/base/: kustomization.yaml  namespace.yaml  snapshot-agent-rbac.yaml
deploy/base/crds/: loraadapter-crd.yaml  modeldeployment-crd.yaml  snapshot-crd.yaml  tenant-crd.yaml
deploy/base/gateway/: configmap.yaml  deployment.yaml  service.yaml
deploy/base/monitoring/: dcgm-exporter.yaml  prometheus-config.yaml  service-monitor.yaml
deploy/base/operator/: deployment.yaml  rbac.yaml  service-account.yaml
deploy/base/proxy/: configmap.yaml  deployment.yaml  service.yaml
deploy/base/storage/: nfs-pv.yaml  nfs-pvc.yaml  snapshot-pv.yaml
deploy/examples/: custom-tts.yaml  llama-8b.yaml  lora-customer-a.yaml  qwen-3-5-9b.yaml  qwen-8b.yaml  stable-diffusion.yaml  tenant-acme.yaml  whisper.yaml
deploy/overlays/dev/: kustomization.yaml
deploy/overlays/production/: kustomization.yaml
deploy/serverless/: deploy.yaml
docker/: base-gpu.Dockerfile  gateway.Dockerfile  model-service.Dockerfile  operator.Dockerfile  proxy.Dockerfile  snapshot-agent-entrypoint.py  snapshot-agent.Dockerfile  worker-generic.Dockerfile  worker-triton.Dockerfile  worker-vllm.Dockerfile
go/: go.mod  go.sum
go/api/v1/: groupversion_info.go  loraadapter_types.go  modeldeployment_types.go  (+3 more)
python/podstack-model-service/: pyproject.toml
python/podstack-model-service/podstack_model_service/: download_manager.py  main.py  storage.py
python/podstack-model-service/podstack_model_service/static/: index.html
python/podstack-proxy/: pyproject.toml
python/podstack-proxy/src/podstack_proxy/: __init__.py  auth.py  billing.py  config.py  server.py
python/podstack-sdk/: pyproject.toml
python/podstack-sdk/src/podstack/: __init__.py  app.py  cli.py  client.py  types.py
python/podstack-worker/: pyproject.toml
python/podstack-worker/src/podstack_worker/: __init__.py  handler.py  health.py  model_loader.py  runtime.py  snapshot_agent.py
(+34 files in other folders)
